# lips101

ae4xx/c++/ae-hello/: CMakeLists.txt  ae-hello.cpp
ae4xx/c++/project_setup/: CMakeLists.txt  project_setup.cpp
ae4xx/opencv/ae-opencv-viewer/: CMakeLists.txt  ae-opencv-viewer.cpp  ae-opencv-viewer.py
ae4xx/python/ae-hello/: ae-hello.py
openni/c++/ni-hello/: CMakeLists.txt  ni-hello.cpp
openni/c++/ni-simple-read/: CMakeLists.txt  ni-simple-read.cpp
openni/c++/project_setup/: CMakeLists.txt  project_setup.cpp
openni/java/ni_hello/: build.gradle  settings.gradle
openni/java/ni_hello/src/main/java/ni_hello/: App.java
openni/java/project_setup/: build.gradle  settings.gradle
openni/java/project_setup/src/main/java/project_setup/: App.java
openni/opencv/ni-opencv-viewer/: CMakeLists.txt  ni-opencv-viewer.cpp  ni-opencv-viewer.py
openni/python/: ni-hello.py  ni-simple-read.py
